# RandomStar

./: CMakeLists.txt  rndstar-setup.sh.in
include/: RandomStar.hpp
src/: RandomStar.cpp  main.cpp
